<resources>
    <string name="app_name">Phase2</string>
    <string name="trading_system">Trading System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="empty"> </string>
    <string name="login_error">Username or password is incorrect. Please try again.</string>
    <string name="log_in">Log In</string>
    <string name="admin_option1">Add/Remove New Admin</string>
    <string name="admin_option2">Manage Frozen/Unfrozen Accounts</string>
    <string name="admin_option3">Add/Remove Item</string>
    <string name="admin_option4">View Trader\'s Status</string>
    <string name="admin_option5">Change Limits</string>
    <string name="change_password">Change Password</string>
    <string name="back">Back</string>
    <string name="admin_requests">Admin Requests</string>
    <string name="please_click_on">Please click on the admin you would like to approve/reject.</string>
    <string name="approve_or_reject">Approve or Reject?</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="enter_password">Enter your new password</string>
    <string name="enter">Enter</string>
    <string name="please_click_on_the_trader_you_d_like_to_view">Please click on the trader you\'d like to view.</string>
    <string name="view_traders">View Traders</string>
    <string name="create_new_account">Create New Account</string>
    <string name="admin_request">Admin Request</string>
    <string name="new_trader">New Trader</string>
    <string name="change_limit">Please click on the limit you\'d like to change.</string>
    <string name="weekly_limit">Weekly Limit</string>
    <string name="max_incomplete_transaction">Max. Incomplete Transaction</string>
    <string name="at_least_lend">At Least Value</string>
    <string name="enter_new_limit">Please enter the new limit.</string>
    <string name="successfully_changed_limit">Successfully changed the limit.</string>
    <string name="FrozenMenu">Please click on what you want to do</string>
    <string name="FlaggedAccount">VIEW FLAGGED ACCOUNTS</string>
    <string name="AllTraders">VIEW ALL TRADER ACCOUNTS</string>
    <string name="unfreeze">VIEW UNFREEZE REQUESTS</string>
    <string name="FlaggedAccounts">Flagged Accounts</string>
    <string name="FreezeAccountDescription">Please click on the account you would like to freeze</string>
    <string name="unfreezeRequest">Unfreeze Request</string>
    <string name="unfreezeChoice">Please choose the account you want to unfreeze</string>
    <string name="allTraders">All Traders</string>
    <string name="freezeTraders">Please click on the trader you want to freeze</string>
    <string name="confirmFreeze">Are you sure you want to freeze this account?</string>
    <string name="freezeAction">Freeze</string>
    <string name="cancelAction">Cancel</string>
    <string name="confirmFreezeFlagged">Are you sure you want to freeze this flagged account?</string>
    <string name="confirmUnfreeze">Are you sure you want to unfreeze this account?</string>
    <string name="unfreezeAccount">UNFREEZE</string>
    <string name="trader_option1">Browse Available Items</string>
    <string name="trader_option2">Browse My On-Going Trades</string>
    <string name="trader_option3">Edit Inventory</string>
    <string name="trader_option4">Edit Wishlist</string>
    <string name="trader_option5">Automatic Trade Suggestion</string>
    <string name="trader_option6">View My User Info</string>
    <string name="trader_option7">Update Status</string>
    <string name="successfully_changed_password">Successfully changed the password.</string>
    <string name="allItems">All Available Items:</string>
    <string name="selectAnItem">Please select the item you would like to view.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_home_city">Do you wish to search based on your home city?</string>
    <string name="on_going_trades">Your On-Going Trades</string>
    <string name="on_going_trades_desc">Please select the trade you wish to view/edit.</string>
    <string name="EditMeetingHeader">Appointment Information:</string>
    <string name="already_agreed">You have already agreed.</string>
    <string name="invalid_location_edit">Please enter a valid location.</string>
    <string name="invalid_date_edit">Please enter a valid date</string>
    <string name="invalid_date_location">Please enter valid information</string>
    <string name="return_meeting_popup">Return meeting information updated.</string>
    <string name="trade_completed">Trade Completed.</string>
    <string name="proposedItems">Proposed Items</string>
    <string name="proposedItemsDescription">Please click on the item you want to approve/reject</string>
    <string name="itemChoiceMenu">Please choose what you would like to do with this item:</string>
    <string name="addToWishlist">Add item to your wishlist</string>
    <string name="proposeTrade">Propose a trade</string>
    <string name="oneWay">One-way</string>
    <string name="twoWay">Two-way</string>
    <string name="tradeOption">Please choose the type of trade you would like to make</string>
    <string name="temp">Temporary</string>
    <string name="perm">Permanent</string>
    <string name="set_info">Please enter the following information regarding your trade:</string>
    <string name="enter_location">Enter a location</string>
    <string name="enter_date">Enter a date (YYYY-MM-DD)</string>
    <string name="set">Set</string>
    <string name="continue_to_next">Continue</string>
    <string name="askundo">Please enter the username of the user whose actions you would like to undo</string>
    <string name="undoUser">Undo User</string>
    <string name="undoEdit">UNDO EDIT MEETING</string>
    <string name="undoAgree">UNDO AGREE MEETING</string>
    <string name="undoConfirm">UNDO CONFIRM MEETING</string>
    <string name="undoProposeTrade">UNDO PROPOSE TRADE</string>
    <string name="undoRemoveItem">UNDO REMOVE ITEM</string>
    <string name="undoEditing">Undo Edit Meeting</string>
    <string name="undoAgreeTrade">Undo Agree Trade</string>
    <string name="undoConfirmTrade">Undo Confirm Trade</string>
    <string name="UndoPropose">Undo Propose Trade</string>
    <string name="UndoRemove">Undo Remove Item</string>
    <string name="undoTradeDescription">Please click on the trade you want to help the user undo</string>
    <string name="undoItemDescription">Please click on the removed item you want to help the user undo</string>
    <string name="UserInfo_username" />
    <string name="UserInfo_status" />
    <string name="UserInfo_location" />
    <string name="current_limit">The current limit is</string>
    <string name="Trader_request_to_unfreeze_already_sent">Request to unfreeze has already been sent</string>
    <string name="Trader_request_to_unfreeze_sent">Request to unfreeze has been sent</string>
    <string name="Trader_request_to_unfreeze_not_frozen">Trader is not currently frozen</string>
    <string name="undoQuestion">Are you sure that you want to undo this action?</string>
    <string name="welcome">Welcome,</string>
    <string name="cannotEdit">You cannot edit the meeting any more.</string>
    <string name="requestAdminPrompt">This page allows you to make the following requests to admins:</string>
    <string name="requestActivateAccount">Activate Account</string>
    <string name="requestInactivateAccount">Deactivate Account</string>
    <string name="Account_already_activated">Account already activated</string>
    <string name="Account_already_deactivated">Account already deactivated</string>
    <string name="Activation_request_sent">Your account is active again</string>
    <string name="Deactivation_request_sent">Your account has been deactivated</string>
    <string name="log_out">Log Out</string>
    <string name="newDate">New Date:</string>
    <string name="newLocation">New Location:</string>
    <string name="locationTypeIn">Enter a new location</string>
    <string name="selectMeeting">+ Select a new date</string>
    <string name="editing">Edit Appointment</string>
    <string name="tutorialBrowseItemsPrompt">Here, you will see all available items for trading. Click on an item to view its info. With an account, by clicking on a item, you will be able to add it to your wishlist or propose a trade for it.</string>
    <string name="maxEditsReached">Trade has been cancelled.</string>
    <string name="tradeDeclined">Trade Offer Declined.</string>
    <string name="declineButton">Decline</string>
    <string name="confirmButton">Confirm</string>
    <string name="meetingDate">Meeting Date:</string>
    <string name="meetingLocation">Meeting Location:</string>
    <string name="editTimesLeft">You can edit 3 times.</string>
    <string name="appointmentStatus">Appointment Status:</string>
    <string name="tradeInfo">Trade Information:</string>
    <string name="tradeDuration">Trade Duration:</string>
    <string name="tradeWith">Trade With:</string>
    <string name="agree">Agree</string>
    <string name="edit">Edit</string>
    <string name="viewItemInfo">View Item Information</string>
    <string name="trading_items">Trading Items:</string>
    <string name="item_name">Item Name</string>
    <string name="owned_by">Owned By:</string>
    <string name="item_rating">Item Rating:</string>
    <string name="description">Description:</string>
    <string name="actual_description_goes_here">Actual Description goes here</string>
    <string name="profileimage">ProfileImage</string>
    <string name="todo">TODO</string>
    <string name="profileitemone">ProfileItemOne</string>
    <string name="welcomeTutorial">Welcome to the tutorial, click on buttons to show more information</string>
    <string name="itemInfo">Item Information</string>
    <string name="ItemDetailsPrompt">Please fill the item information </string>
    <string name="itemName">Name:</string>
    <string name="itemNameHint">Enter item Name</string>
    <string name="ratingHint">Enter the rating</string>
    <string name="catergory">Category:</string>
    <string name="categoryHint">Enter item category</string>
    <string name="descriptionHint">Enter item Description</string>
    <string name="addItem">Add Item</string>
    <string name="undo">UNDO</string>
    <string name="yourInventory">Your Inventory</string>
    <string name="cancel">Cancel</string>
    <string name="ADMINKEY">AdminActions</string>
    <string name="TRADERKEY">TraderManager</string>
    <string name="TRADEKEY">TradeManager</string>
    <string name="ITEMKEY">ItemManager</string>
    <string name="MEETINGKEY">MeetingManager</string>
    <string name="USERNAMEKEY">Username</string>
    <string name="ViewMyUserInfo_title">User Information</string>
    <string name="ViewMyUserInfo_subTitle">Top Trading Partners:</string>
    <string name="Edit_Homecity_button">Change HomeCity</string>
    <string name="changeHomecity_title">Enter your new homecity:</string>
    <string name="changeHomecity_button">Enter</string>
    <string name="changeHomecity_input" />
    <string name="notApplicable">N/A</string>
    <string name="cannotConfirm">Cannot confirm until meeting date has passed.</string>
    <string name="recommend_item">Would you like us to recommend an item for this trade?</string>
    <string name="your_items">Here are the items in your inventory that you may trade:</string>
    <string name="choose_item">Please choose the item you would like to use for this trade.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_view_item">Please select the item you would like to view</string>
    <string name="add_new_item">Add New Item</string>
</resources>