<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".UndoFragment">


<TextView
        android:layout_width="305dp"
        android:layout_height="106dp"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:text="@string/undoQuestion"
        android:textSize="20sp" />

    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="#CE043667"
        android:text="@string/undo"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/undoCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="250dp"
        android:layout_marginTop="50dp"
        android:text="@string/cancelAction" />


</FrameLayout>