<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutorial.TutorialActivity">

    <TextView
        android:id="@+id/prompt"
        android:layout_width="375dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcomeTutorial"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />


    <Button
        android:id="@+id/browseItemsButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="onBrowseItems"
        android:text="@string/trader_option1"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/browseTradesButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginEnd="24dp"
        android:onClick="onBrowseTrades"
        android:text="@string/trader_option2"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/editInventoryButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:onClick="onEditInventory"
        android:text="@string/trader_option3"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <Button
        android:id="@+id/editWishListButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginEnd="24dp"
        android:onClick="onEditWishList"
        android:text="@string/trader_option4"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/requestUnfreezeButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:onClick="onRequestUnfreeze"
        android:text="@string/trader_option7"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />

    <Button
        android:id="@+id/viewInfoButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="onViewInfo"
        android:text="@string/trader_option6"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/changePassButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginEnd="24dp"
        android:onClick="onChangePassword"
        android:text="@string/change_password"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <Button
        android:id="@+id/changeHomeCityButton"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:onClick="onChangeHomeCity"
        android:text="@string/Edit_Homecity_button"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

</androidx.constraintlayout.widget.ConstraintLayout>