<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApproveAdminActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve_or_reject"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/approve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approve"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:onClick="onApproveClicked"/>

    <Button
        android:id="@+id/reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="250dp"
        android:onClick="onRejectClicked"/>


</FrameLayout>