<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TraderActivity">

    <Button
        android:id="@+id/button21"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="40dp"
        android:onClick="browseAvailableItems"
        android:text="@string/trader_option1"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <Button
        android:id="@+id/button24"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="52dp"
        android:onClick="editInventory"
        android:text="@string/trader_option3"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/button28"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button28"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="52dp"
        android:onClick="automaticTradeSuggestion"
        android:text="@string/trader_option5"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintEnd_toStartOf="@+id/button26"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button29"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="48dp"
        android:onClick="requestToUnfreeze"
        android:text="@string/trader_option7"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button23"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:onClick="browseOnGoingTrades"
        android:text="@string/trader_option2"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <Button
        android:id="@+id/button25"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:onClick="editWishlist"
        android:text="@string/trader_option4"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/button26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button24" />

    <Button
        android:id="@+id/button26"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:onClick="viewUserInfo"
        android:text="@string/trader_option6"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/button27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button28" />

    <Button
        android:id="@+id/button27"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="48dp"
        android:onClick="changeTraderPassword"
        android:text="@string/change_password"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button29" />

    <TextView
        android:id="@+id/welcomTraderTv"
        android:layout_width="117dp"
        android:layout_height="37dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/welcomTraderTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>